--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -174,6 +174,10 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="Services">
+    <div id="title">
+      <h1><span>Services</span></h1>
+    </div>
+
   <div id="reactor-services">
     <div id="panels">
 
@@ -189,6 +193,7 @@
           </thead>
           <tbody>
           {{#each services}}
+            {{#if this.isSystem}}
             <tr>
               <td style="max-width: 350px;" class="app-list-name service-col"><a class="none-text-decoration">
                 {{this.name}}
@@ -223,6 +228,87 @@
                   <div class="instance-num auto-margin"><span>{{this.provisioned}}</span></div>
               </td>
             </tr>
+            {{/if}}
+          {{/each}}
+          </tbody>
+        </table>
+
+      </div>
+
+      <div class="panel">
+        <table class="table">
+          <thead>
+            <th style="padding-left: 14px; min-width: 350px" class="service-col">Name</th>
+            <th style="min-width: 100px;" class="status-col center-align">Status
+            </th>
+            <th style="min-width: 100px;" class="logs-col center-align">Logs</th>
+            <th style="min-width: 200px;" class="instance-col center-align">Instances Requested</th>
+            <th style="min-width: 200px;" class="instance-col center-align">Provisioned</th>
+            <th> Start/Stop </th>
+          </thead>
+          <tbody>
+          {{#each services}}
+
+            {{#if this.isUser}}
+            <tr>
+              <td style="max-width: 350px;" class="app-list-name service-col"><a class="none-text-decoration">
+                {{this.name}}
+              </a>
+                <br />
+                <span class="app-list-status">{{this.description}}</span>
+              </td>
+              <td style="max-width: 100px;" class="status-col center-align">
+                <span {{ bindAttr class=":service-icon this.imgClass" }} ></span>
+              </td>
+              <td style="max-width: 100px;" class="status-col center-align">
+                {{#if this.logsStatusOk}}
+                {{#linkTo 'Service.Log' this}}<span {{ bindAttr class=":log-icon this.logClass" }} ></span>{{/linkTo}}
+                {{ else }}
+                  <span data-toggle="tooltip" data-placement="right" title="Please contact your system admistrator for logs.">NA</span>
+                {{/if}}
+              </td>
+              <td style="max-width: 200px;" class="instance-col">
+                <div class="instance-wrapper">
+                  <div class="instance-num"><span>{{this.requested}}</span></div>
+                  <div>
+                    <a class="cursor-pointer" {{action decreaseInstance this.name this.requested }}>
+                      <span class="minus-icon"></span>
+                    </a>
+                    <a class="cursor-pointer" {{action increaseInstance this.name this.requested }}>
+                      <span class="plus-icon"></span>
+                    </a>
+                  </div>
+                </div>
+              <td style="max-width: 350px;" class="instance-provisioned service-col">
+                  <div class="instance-num auto-margin"><span>{{this.provisioned}}</span></div>
+              </td>
+              <td>
+                  <div class="btn-group start-stop-btns">
+                      <button class="btn start"><img src="/assets/img/v2/play_active_icon.png"></button>
+                      <button class="btn stop"><img src="/assets/img/v2/stop_active_icon.png"></button>
+                  </div>
+
+                  <div id="action-buttons" class="btn-group">
+                    <button class="btn btn-blank dropdown-toggle" data-toggle="dropdown">
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li style="min-width:200px; padding:4px 16px 2px;">
+                        More Options Here
+                      </li>
+                      <li style="min-width:200px; padding:4px 16px 2px;">
+                        More Options Here
+                      </li>
+                      <li style="min-width:200px; padding:4px 16px 2px;">
+                        More Options Here
+                      </li>
+                    </ul>
+                  </div>
+
+              </td>
+            </tr>
+
+              {{/if}}
           {{/each}}
           </tbody>
         </table>
