--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -246,7 +246,8 @@
             <th style="min-width: 200px;" class="instance-col center-align"> Start/Stop </th>
           </thead>
           <tbody>
-          {{#each userServices}}
+          {{#each servicesArray}}
+          {{#unless this.deleted}}
             <tr>
               <td style="max-width: 350px;" class="app-list-name service-col"><a class="none-text-decoration">
                 {{this.name}}
@@ -274,8 +275,8 @@
               </td>
               <td class="center-align">
                   <div class="btn-group start-stop-btns">
-                      <button class="alianwarstart" {{action start this.appID this.id}}></button>
-                      <button class="alianwarstop" {{action stop this.appID this.id}}></button>
+                      <button class="userServices-start" {{action start this.appID this.id}}></button>
+                      <button class="userServices-stop" {{action stop this.appID this.id}}></button>
                   </div>
               </td>
             </tr>
@@ -312,6 +313,7 @@
             </tr>
             {{/each}}
             {{!--  RUNNABLES ROWS --}}
+          {{/unless}}
           {{/each}}
           </tbody>
         </table>
