--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -234,6 +234,16 @@
           </div>
           {{/if}}
 
+    </div>
+  </div>
+{{!--
+   <div id="title">
+      <h1><span>System Services</span></h1>
+    </div>
+--}}
+  <div id="reactor-services-REMOVED-CLASS">
+    <div id="panels">
+
           {{#if userServices}}
           <div class="panel">
           <table class="table">
@@ -249,7 +259,7 @@
             {{#each service in userServices}}
               <tr>
                 <td style="max-width: 350px;" class="app-list-name service-col"><a class="none-text-decoration">
-                  {{service.name}}
+                  <a {{bindAttr href="service.href"}}>{{service.app}}:{{service.name}}</a><br /><span class="app-list-status app-status">{{service.status}}</span>
                 </a>
                   <br />
                   <span class="app-list-status">{{service.description}}</span>
@@ -260,26 +270,22 @@
                 <td style="max-width: 200px;" class="instance-col">
                 </td>
                 <td style="max-width: 350px;" class="instance-provisioned service-col">
-                    <div id="action-buttons" class="btn-group pull-right">
-                    {{#linkTo 'UserService.Config' service}}<button class="btn btn-icon"><span class="btn-config"></span></button>{{/linkTo}}
-
-                    </div>
                 </td>
                 <td class="center-align">
                     <div class="btn-group start-stop-btns">
-                        <button class="userServices-start" {{action start service.app service.name}}></button>
-                        <button class="userServices-stop" {{action stop service.app service.name}}></button>
+                        <button class="userServices-start" {{action start service}}></button>
+                        <button class="userServices-stop" {{action stop service}}></button>
                     </div>
                 </td>
               </tr>
               {{!--  RUNNABLES ROWS --}}
                 {{#each runnable in service.runnablesList}}
                 <tr>
-                <td style="max-width: 350px;" class="app-list-name service-col"><a class="none-text-decoration">
-                  {{runnable.name}}
+                <td style="max-width: 350px;" class="app-list-name service-col pull-right center-align"><a class="none-text-decoration">
+                  {{runnable.id}}
                 </a>
                   <br />
-                  <span class="app-list-status">runnable</span>
+                  <span class="app-list-status pull-left">runnable</span>
                 </td>
                 <td style="max-width: 100px;" class="status-col center-align">
                   {{!-- removed status icon from here --}}
@@ -288,10 +294,10 @@
                   <div class="instance-wrapper">
                     <div class="instance-num"><span>{{runnable.requested}}</span></div>
                     <div>
-                      <a class="cursor-pointer" {{action userService_decreaseInstance service.app service.name runnable.name runnable.requested }}>
+                      <a class="cursor-pointer" {{action userService_decreaseInstance service runnable.id runnable.requested }}>
                         <span class="minus-icon"></span>
                       </a>
-                      <a class="cursor-pointer" {{action userService_increaseInstance service.app service.name runnable.name runnable.requested }}>
+                      <a class="cursor-pointer" {{action userService_increaseInstance service runnable.id runnable.requested }}>
                         <span class="plus-icon"></span>
                       </a>
                     </div>
@@ -332,20 +338,144 @@
 
   </script>
 
+  <script type="text/x-handlebars" data-template-name="UserserviceStatus">
+{{#if model}}
+  <div id="reactor-services-REMOVED-CLASS">
+    <div id="panels">
+          <div class="panel">
+          <table class="table">
+            <thead>
+              <th style="padding-left: 14px; min-width: 350px" class="service-col">Name</th>
+              <th style="min-width: 100px;" class="status-col center-align">Status
+              </th>
+              <th style="min-width: 200px;" class="center-align">Instances Requested</th>
+              <th style="min-width: 200px;" class="center-align">Provisioned</th>
+              <th style="min-width: 200px;" class="center-align"> Start/Stop </th>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="max-width: 350px;" class="app-list-name service-col"><a class="none-text-decoration">
+                  <a {{bindAttr href="model.href"}}>{{model.app}}:{{model.name}}</a><br /><span class="app-list-status app-status">{{model.status}}</span>
+                </a>
+                  <br />
+                  <span class="app-list-status">{{model.description}}</span>
+                </td>
+                <td style="max-width: 100px;" class="status-col center-align">
+                  <span {{ bindAttr class=":service-icon model.imgClass" }} ></span>
+                </td>
+                <td style="max-width: 200px;" class="instance-col">
+                </td>
+                <td style="max-width: 350px;" class="instance-provisioned service-col">
 
-  <script type="text/x-handlebars" data-template-name="UserService">
+                </td>
+                <td class="center-align">
+                    <div class="btn-group start-stop-btns">
+                        <button class="userServices-start" {{action start model}}></button>
+                        <button class="userServices-stop" {{action stop model}}></button>
+                    </div>
+
+                    <ul class="nav nav-pills center-align" style="margin: 2px 14px;">
+                      <div id="action-buttons" class="btn-group pull-right">
+                      <button {{action config}} class="btn btn-icon"><span class="btn-config"></span></button>
+                      </div>
+                    </ul>
+                </td>
+              </tr>
+              {{!--  RUNNABLES ROWS --}}
+                {{#each runnable in model.runnablesList}}
+                <tr>
+                <td style="max-width: 350px;" class="app-list-name service-col pull-right center-align"><a class="none-text-decoration">
+                  {{runnable.id}}
+                </a>
+                  <br />
+                  <span class="app-list-status pull-left">runnable</span>
+                </td>
+                <td style="max-width: 100px;" class="status-col center-align">
+                  {{!-- removed status icon from here --}}
+                </td>
+                <td style="max-width: 200px;" class="instance-col">
+                  <div class="instance-wrapper">
+                    <div class="instance-num"><span>{{runnable.requested}}</span></div>
+                    <div>
+                      <a class="cursor-pointer" {{action userService_decreaseInstance model runnable.id runnable.requested }}>
+                        <span class="minus-icon"></span>
+                      </a>
+                      <a class="cursor-pointer" {{action userService_increaseInstance model runnable.id runnable.requested }}>
+                        <span class="plus-icon"></span>
+                      </a>
+                    </div>
+                  </div>
+                <td style="max-width: 350px;" class="instance-provisioned service-col">
+                    <div class="instance-num auto-margin"><span>{{runnable.provisioned}}</span></div>
+                </td>
+                <td class="center-align">
+                  {{!-- removed start/stop buttons from here --}}
+                </td>
+              </tr>
+              {{/each}}
+              {{!--  RUNNABLES ROWS --}}
+            </tbody>
+          </table>
+          </div>
+
+      </div>
+    </div>
+
+  {{outlet config}}
+
+{{/if}}
+  </script>
+
+  <script type="text/x-handlebars" data-template-name="Userservice">
 
     <div id="title">
       <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
-        <li>{{#linkTo Service.Log model}}Log{{/linkTo}}</li>
+        <li>{{#linkTo Userservice.History model}}History{{/linkTo}}</li>
+      </ul>
+      <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
+        <li>{{#linkTo UserserviceStatus model}}Status{{/linkTo }}</li>
       </ul>
       <h1><span>Service</span> {{model.name}}</h1>
     </div>
 
-    
-
     {{outlet}}
 
+  </script>
+
+  <script type="text/x-handlebars" data-template-name="Userservice/History">
+    <div id="panels">
+      <div id="informer"></div>
+      <div class="panel">
+        <div id="object-list">
+          {{#if runs.length}}
+            <table class="table table-condensed">
+            <thead>
+              <tr><th style="width: 300px;">Started</th>
+              <th>Ended</th>
+              <th style="width:250px;">Result</th>
+              </tr>
+            </thead>
+            <tbody>
+            {{#each runs}}
+              <tr class="run-list">
+                <td>{{started}}<div class="flow-run-date"> {{startDate}} </div></td>
+                <td>{{ended}} <div class="flow-run-date"> {{endDate}}</div></td>
+                <td>{{detail}}</td>
+              </tr>
+            {{/each}}
+            </tbody>
+            </table>
+          {{else}}
+            <div class="object-list-empty">
+            <div class="object-list-empty-content">
+            <div>No History.</div>
+            <span>This Userservice has not completed a run yet.</span>
+            </div>
+            </div>
+          {{/if}}
+        </div>
+      </div>
+    </div>
   </script>
 
   <script type="text/x-handlebars" data-template-name="Login">
