--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -216,10 +216,10 @@
                   <div class="instance-wrapper">
                     <div class="instance-num"><span>{{this.requested}}</span></div>
                     <div>
-                      <a class="cursor-pointer" {{action decreaseInstance this.name this.requested }}>
+                      <a class="cursor-pointer" {{action decreaseInstance this this.requested }}>
                         <span class="minus-icon"></span>
                       </a>
-                      <a class="cursor-pointer" {{action increaseInstance this.name this.requested }}>
+                      <a class="cursor-pointer" {{action increaseInstance this this.requested }}>
                         <span class="plus-icon"></span>
                       </a>
                     </div>
@@ -288,10 +288,10 @@
               <div class="instance-wrapper">
                 <div class="instance-num"><span>{{runnable.requested}}</span></div>
                 <div>
-                  <a class="cursor-pointer" {{action userService_decreaseInstance service runnable.id runnable.requested }}>
+                  <a class="cursor-pointer" {{action runnableDecreaseInstance service runnable.id runnable.requested }}>
                     <span class="minus-icon"></span>
                   </a>
-                  <a class="cursor-pointer" {{action userService_increaseInstance service runnable.id runnable.requested }}>
+                  <a class="cursor-pointer" {{action runnableIncreaseInstance service runnable.id runnable.requested }}>
                     <span class="plus-icon"></span>
                   </a>
                 </div>
@@ -388,10 +388,10 @@
                   <div class="instance-wrapper">
                     <div class="instance-num"><span>{{runnable.requested}}</span></div>
                     <div>
-                      <a class="cursor-pointer" {{action userService_decreaseInstance model runnable.id runnable.requested }}>
+                      <a class="cursor-pointer" {{action runnableDecreaseInstance model runnable.id runnable.requested }}>
                         <span class="minus-icon"></span>
                       </a>
-                      <a class="cursor-pointer" {{action userService_increaseInstance model runnable.id runnable.requested }}>
+                      <a class="cursor-pointer" {{action runnableIncreaseInstance model runnable.id runnable.requested }}>
                         <span class="plus-icon"></span>
                       </a>
                     </div>
