Give min width to header (600px), and increase min-width of content to 1280px.

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -1336,11 +1336,12 @@
     <div id="panels">
 
       <div class="panel">
-      <div class="panel-head"><div class="panel-title">Attached Flows</div></div>
+        <div class="panel-head"><div class="panel-title">Attached Flows</div>
+      </div>
 
         {{partial "flows-list"}}
 
-      </div>
+    </div>
   </script>
 
 <script type="text/x-handlebars" data-template-name="Procedure">
